package ui;
import javax.swing.table.AbstractTableModel;


public final class BancoModel extends AbstractTableModel{

        public BancoModel() {
        }


        @Override
        public int getRowCount() {
            return 0;
        }

        @Override
        public int getColumnCount() {
            return 0;
        }

        @Override
        public Object getValueAt(int rowIndex, int columnIndex) {
            return null;
        }
}
